# psiserve

./: .clangd  .gitignore  .gitmodules  AGENTS.md  BUILDING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  DesignTodo.md  TASKS.md  TASKS.md.bak  TODO.md  backlog.md  fib_simple.wasm  write_exit.wasm
cmake/llvm-wasi/: CMakeLists.txt  prebuilts.cmake  wasi-llvm-toolchain.cmake  wasi_llvm_stubs.c
cmake/llvm-wasi/stubs-project/: CMakeLists.txt
cmake/llvm-wasi/wasi_compat/: __struct_rusage.h  dlfcn.h  execinfo.h  fcntl.h  pwd.h  setjmp.h  signal.h  unistd.h
cmake/llvm-wasi/wasi_compat/sys/: ioctl.h  resource.h  socket.h  statvfs.h  un.h  wait.h
cmake/llvm-wasi/wasi_compat_cxx/: README.md  condition_variable  mutex  shared_mutex
libraries/pcrypt/: CMakeLists.txt
libraries/pcrypt/include/pcrypt/: sha256.hpp
libraries/pcrypt/src/: sha256.cpp
libraries/pfs/: CMakeLists.txt  design.md
libraries/pfs/include/pfs/: block_store.hpp  cas.hpp  cid.hpp  config.hpp  keys.hpp  schema.hpp  store.hpp  unixfs.hpp
libraries/pfs/src/: block_store.cpp  cas.cpp  cid.cpp  store.cpp  unixfs.cpp
libraries/pfs/tests/: CMakeLists.txt  pfs_tests.cpp
libraries/psiber/: CMakeLists.txt
libraries/psiber/benchmarks/: boost_fiber_bench.cpp  psiber_bench.cpp  sync_vs_call_bench.cpp
libraries/psiber/include/psiber/: dns.hpp  fiber.hpp  fiber_future.hpp  fiber_mutex.hpp  fiber_promise.hpp  fiber_shared_mutex.hpp  fiber_tx_mutex.hpp  io_engine.hpp  io_engine_kqueue.hpp  reactor.hpp  scheduler.hpp  send_queue.hpp  spin_lock.hpp  strand.hpp  tcp_socket.hpp  thread.hpp  tls_socket.hpp  types.hpp
libraries/psiber/src/: dns.cpp  fiber_mutex.cpp  io_engine_epoll.cpp  io_engine_kqueue.cpp  reactor.cpp  scheduler.cpp  send_queue.cpp  strand.cpp  tcp_socket.cpp  thread.cpp  tls_socket.cpp
libraries/psiber/tests/: deadlock_tests.cpp  detail_atomic_tests.cpp  dns_tests.cpp  edge_case_tests.cpp  fiber_mutex_tests.cpp  fiber_wake_tests.cpp  integration_tests.cpp  lifo_slot_tests.cpp  reactor_integration_tests.cpp  reactor_tests.cpp  scheduler_tests.cpp  send_queue_tests.cpp  signal_tests.cpp  strand_tests.cpp  stress_tests.cpp  tcp_socket_tests.cpp  tls_socket_tests.cpp
libraries/psio/cpp/: CMakeLists.txt
libraries/psio/cpp/benchmarks/: CMakeLists.txt  beacon_types.hpp  beacon_types_fulu.hpp  bench_capnp.cpp  bench_cp_view.cpp  bench_flatbuf.cpp  bench_fracpack.cpp  bench_fracpack16.cpp  bench_fuzz_generated.cpp  bench_modern_state.cpp  bench_nested_encode.cpp  bench_perf_report.cpp  bench_pjson_types.cpp  bench_pjson_walk.cpp  bench_protobuf.cpp  bench_psch.cpp  bench_psio_vs_externals.cpp  bench_reflect_flatbuf.cpp  bench_schemas.fbs  bench_schemas.proto  bench_schemas_generated.h  bench_shadow_index.cpp  bench_ssz_beacon.cpp  bench_standalone_flatbuf.cpp  bench_varint.cpp  bench_wit.cpp  bench_zero_compress.cpp  gen_report.py  harness.hpp  shapes.hpp
libraries/psio/cpp/doc/: flatbuf.md
libraries/psio/cpp/src/: emit_wit.cpp  schema.cpp  stub.cpp
libraries/psio/cpp/tests/: CMakeLists.txt  adapter_tests.cpp  annotate_tests.cpp  beacon_state_tests.cpp  bin_extensibility_tests.cpp  bin_tests.cpp  bitset_tests.cpp  bounded_tests.cpp  capnp_parser_tests.cpp  capnp_schema_tests.cpp  capnp_view_tests.cpp  caps_parity_tests.cpp  compat_tests.cpp  conformance_tests.cpp  cpo_dispatch_tests.cpp  dynamic_tests.cpp  emit_capnp_tests.cpp  emit_fbs_tests.cpp  main.cpp  (+69 more)
libraries/psio1/cpp/: CMakeLists.txt
libraries/psio1/python/: pyproject.toml
libraries/psio3/cpp/: CMakeLists.txt
libraries/psiserve/: CMakeLists.txt
libraries/psiserve/src/: fiber_lock_policy_check.cpp  host_api.cpp  io_engine_kqueue.cpp  log.cpp  module_store.cpp  runtime.cpp  scheduler.cpp
libraries/psiserve/tests/: db_e2e_test.cpp  db_guest.cpp  db_host_test.cpp  fd_table_test.cpp  host_api_log_test.cpp  instance_context_test.cpp  module_store_test.cpp  runtime_host_test.cpp
libraries/psizam/: .gitignore  CLAUDE.md  CMakeLists.txt  DOCS.md  KNOWN_ISSUES.md  LICENSE  README.md
libraries/psizam/benchmarks/: CMakeLists.txt  README.md  bench_compare.cpp  bench_gas.cpp  bench_hosts.hpp  bench_misc.wasm  bench_wasmer.cpp  bench_wasmtime.cpp  wamr_wrapper.cmake
libraries/psizam/docs/: OVERVIEW.md  gas-metering-design.md  resource-system-design.md  runtime-api-design.md
libraries/psizam/examples/: CMakeLists.txt
libraries/psizam/modules/: PsiZamBuildUtils.cmake
libraries/psizam/src/: call_on_stack.cpp  eh_runtime.cpp  llvm_aot_compiler.cpp  llvm_compile.cpp  llvm_ir_translator.cpp  llvm_jit_compiler.cpp  llvm_runtime_helpers.cpp  runtime.cpp  runtime_helpers.cpp  wasi_cxa_stubs.cpp
libraries/psizam/tests/: CMakeLists.txt  allocator_tests.cpp  backend_tests.cpp  bench_composition.cpp  call_indirect_tests.cpp  call_return_stack_bytes_tests.cpp  compile_bench.cpp  compile_time.cpp  component_tests.cpp  composition_tests.cpp  debug_trap_tests.cpp  exception_handling_tests.cpp  fp_mode_differential_tests.cpp  gas_heavy.wasm.hpp  gas_heavy.wast  gas_metering_tests.cpp  globals_memory_tests.cpp  golden_gen.cpp  guarded_ptr_tests.cpp  host_functions_tests.cpp  implementation_limits_tests.cpp  instantiation_tests.cpp  jit2_basic_tests.cpp  jit2_load_test.cpp  jit2_sha_test.cpp  main.cpp  max_br_table_elements_tests.cpp  max_code_bytes_tests.cpp  max_func_local_bytes_tests.cpp  max_linear_memory_init_tests.cpp  max_local_sets_tests.cpp  max_memory_offset_tests.cpp  max_mutable_globals_tests.cpp  max_nested_structures_tests.cpp  max_pages_tests.cpp  max_section_elements_tests.cpp  max_stack_bytes_tests.cpp  max_table_elements_tests.cpp  null_tests.cpp  parse_tests.cpp  (+22 more)
libraries/psizam/tools/: CMakeLists.txt  addr2line.cpp  bench_compile.cpp  bench_host_calls.cpp  bench_interp.cpp  bench_psibase_host.cpp  hello.wasm.hpp  hello_driver.cpp  interp.cpp  psizam_wasi.cpp  pzam.cpp  pzam_compile.cpp  pzam_inspect.cpp  pzam_run.cpp  pzam_validate.cpp  pzam_wit.cpp
libraries/wasi/cpp/: CMakeLists.txt  README.md
programs/psiserve-cli/: CMakeLists.txt  main.cpp
programs/source-to-pzam/: CMakeLists.txt  source_to_pzam.cpp
(+1358 files in other folders)
